# cubscrape

./: .env.example  .gitignore  .htmlhintrc  .prettierignore  .prettierrc.json  .stylelintrc.json  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  FILTERING_IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  PERFORMANCE_PLAN.md  PERFORMANCE_SESSION_STATE.md  README-vue.md  README.md  config.json  dev.py  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  script.js  style.css  tsconfig.json  tsconfig.node.json  vite.config.js
.claude/agents/: code-quality-guardian.md  data-scraping-analyst.md  full-stack-architect.md  game-discovery-product-expert.md  vue-tailwind-ui-designer.md
.github/: dependabot.yml
.github/workflows/: pages-with-db.yml  scrape.yml
archive/web-original/: index.html  style.css
data/: other_games.json  schema.sql  steam_games.json  videos-aliensrock.json  videos-dextag.json  videos-idlecub.json  videos-nookrium.json  videos-olexa.json  videos-orbitalpotato.json  videos-splattercatgaming.json  videos-wanderbots.json  videos.json
docs/: ARCHITECTURE.md  COMPONENT_ARCHITECTURE.md  DEPLOY.md  FAVICON.md  QUICK_REFERENCE.md
public/: app-version.json  site.webmanifest
scraper/: __init__.py  base_fetcher.py  batch_manager.py  bulk_fetch_error_handler.py  cli_commands.py  config_manager.py  constants.py  crazygames_fetcher.py  cross_platform_matcher.py  data_manager.py  data_quality.py  database_manager.py  game_inference.py  game_unifier.py  itch_fetcher.py  models.py  other_games_updater.py  reference_validator.py  requirements.txt  scraper.py  scraper_refactored.py  steam_api_response_parser.py  steam_bulk_http_client.py  steam_changes.py  steam_fetcher.py  steam_price_update_service.py  steam_updater.py  unified_data_collector.py  update_logger.py  utils.py  video_processor.py  youtube_extractor.py
scripts/: cleanup_currency_fields.py  database-rebuild-plugin.js  dev.js  generate-app-version.js  stop-dev.js
src/: App.vue  style.css
src/components/: AppliedFiltersBar.vue  ChannelFilterMulti.vue  CollapsibleSection.vue  DatabaseStatus.vue  FilterPresets.vue  GameCard.vue  GameDiscoveryContainer.vue  GameFilters.vue  MobileChannelFilter.vue  MobileFilterModal.vue  MobileFilterPresets.vue  MobilePriceFilter.vue  MobileSortingOptions.vue  MobileTagFilter.vue  MobileTimeFilter.vue  MobileTimeFilterSimple.vue  PaginationControls.vue  PlatformLinks.vue  PriceFilter.vue  SortIndicator.vue  SortingOptions.vue  TagFilterMulti.vue  TimeFilter.vue  TimeFilterSimple.vue  ToastNotifications.vue
src/composables/: useDatabaseLifecycle.ts  useDebouncedFilters.js  useDebouncedFilters.ts  useDeepLinking.ts  useFilterState.ts  useGameSearch.ts  useLivePriceCount.ts  usePagination.ts  useProgressiveLoading.ts  useProgressiveOptions.js  useProgressiveOptions.ts  useToast.ts  useURLState.ts
src/config/: README.md  constants.js  constants.ts  index.js  index.ts  platforms.js  platforms.ts  theme.js  theme.ts
src/services/: GameDataProcessingService.ts  GameDatabaseService.ts  QueryBuilderService.ts
src/types/: database.ts  filters.ts  platform-discriminated.ts  sorting.ts  timeFilter.ts  vue-shims.d.ts
src/utils/: databaseManager.js  databaseManager.ts  debug.ts  performanceMonitor.js  performanceMonitor.ts  presetManager.js  presetManager.ts  priceFormatter.ts  ratingConfig.js  ratingConfig.ts
ui-mockups/: 01-current-vs-proposed.html  02-desktop-filter-sidebar.html  03-mobile-bottom-sheet.html  04-multi-select-components.html  05-time-based-filters.html  06-filter-state-visualization.html  07-interactive-states.html  08-complex-filtering-scenarios.html
