[project]
name = "cubscrape"
version = "0.1.0"
description = "YouTube to Steam game data scraper"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.12.23",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Set the maximum line length
line-length = 120

# Assume Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
]

# Disable these specific rules
ignore = [
    "E501",   # Line too long (handled by line-length setting)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Within `except` clause, raise exceptions with `raise ... from err`
    "N806",   # Variable name should be lowercase
    "SIM108", # Use ternary operator instead of if-else
    "PTH123", # Use pathlib instead of os.path
]

[tool.ruff.lint.isort]
# Group imports
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Automatically detect line ending
line-ending = "auto"
