[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubscrape"
version = "0.1.0"
description = "YouTube to Steam game data scraper"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.12.23",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "python-dateutil>=2.9.0.post0",
    "pydantic>=2.0.0",
]

[project.scripts]
cubscrape = "scraper.cli_commands:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.19",
    "lxml-stubs>=0.5.1",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Set the maximum line length
line-length = 120

# Match project's Python 3.12+ requirement
target-version = "py312"

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "A",   # flake8-builtins (avoid shadowing built-ins)
    "PERF", # Performance improvements
    "ARG",  # Unused arguments
]

# Disable these specific rules
ignore = [
    "E501",   # Line too long (handled by line-length setting)
    "RUF022", # Unsorted __all__ (prefer logical grouping over alphabetical)
    "SIM108", # Use ternary operator instead of if-else (prefer readable if/else)
]

[tool.ruff.lint.isort]
# Group imports
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Automatically detect line ending
line-ending = "auto"

[tool.mypy]
# Require type annotations
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Warn about redundant constructs
warn_redundant_casts = true
warn_unused_ignores = true

# Error on missing imports
strict_optional = true
warn_return_any = true

# Check untyped definitions
check_untyped_defs = true

# Platform configuration
python_version = "3.12"

# Follow imports and check them
follow_imports = "normal"

# Show error codes
show_error_codes = true

# Exclude common directories
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "node_modules/",
]

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
